fix: z-index

--- a/assets/index.less
+++ b/assets/index.less
@@ -144,7 +144,7 @@
       width: 100%;
       align-items: center;
       flex-direction: row-reverse;
-      z-index: 1;
+      z-index: @zindex-preview-mask + 1;
       color: @text-color;
       background: fade(@preview-mask-bg, 45%);
 
